modules/grammars/ide/src/test/resources/cocos/valid/NoComponentInModuleConfiguration.ide
package valid

typedef configuration NoComponentInModuleConfiguration {
    backend task main
}
