modules/grammars/ide/src/test/resources/cocos/invalid/NoComponentInModuleConfiguration.ide
package invalid

typedef component configuration NoComponentInModuleConfiguration {
    backend task main
}
